Bug 911201 - Do not create a bogus br node for editable areas containing non-editable block elements; r=roc

We no longer rely on the bogus br node for positioning the caret.
If an editable region has a non-editable block element, we can
probably rely on the block element to reserve the vertical
height, so in those cases we should be able to get away without
a bogus br node.